# ComfyUI-HiDream-I1

./: README.md  __init__.py  nodes.py  pyproject.toml
src/models/: attention.py  attention_processor.py  embeddings.py
src/pipelines/hidream_image/: pipeline_hidream_image.py  pipeline_output.py
